--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^4.8.0",
     "@types/express": "^4.17.15",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
@@ -17,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.8.0"
   }
 }
