--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^4.8.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
