--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^4.8.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
