--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
   },
@@ -23,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.0"
   }
 }
