--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.0"
