--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.ts",
-    "build": "rimraf dist && tsc",
-    "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/app.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -33,13 +31,6 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
-    "precommit": "^1.2.2",
-    "prisma": "^4.8.0",
-    "rimraf": "^4.1.1"
-  },
-  "pre-commit": [
-    "ts.check",
-    "build",
-    "add-build"
-]
+    "prisma": "^4.8.0"
+  }
 }
